Bug 183581 - On proportional biased dynamic playlist "Last played" match is not properly saved to dynamic.xml.
Summary: On proportional biased dynamic playlist "Last played" match is not properly s...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-07 18:07 UTC by Harri Rantala
Modified: 2009-03-01 23:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harri Rantala 2009-02-07 18:07:17 UTC
Version:           2.0.1.1 (using KDE 4.2.0)
Compiler:          gcc 4.3.3 
OS:                Linux
Installed from:    Gentoo Packages

On proportional biased dynamic playlist "Last played" match is saved as "listplay", not as "lastplay" to ~/.kde4/share/apps/amarok/dynamic.xml. So the playlist is not working when amarok reads the file.

It seems to be a typo in XmlQueryWriter.cpp, here's the fix:

--- src/collection/support/XmlQueryWriter.cpp.orig      2009-02-07 14:22:52.000000000+0200
+++ src/collection/support/XmlQueryWriter.cpp   2009-02-07 14:23:58.000000000 +0200
@@ -446,7 +446,7 @@
         case Meta::valScore:       return "score";
         case Meta::valRating:      return "rating";
         case Meta::valFirstPlayed: return "firstplay";
-        case Meta::valLastPlayed:  return "listplay";
+        case Meta::valLastPlayed:  return "lastplay";
         case Meta::valPlaycount:   return "playcount";
         default:                   return "";
     }
Comment 1 Lydia Pintscher 2009-03-01 23:41:53 UTC
Fix commited by Modestas Vainius. Thanks :)