Fix typos in src/collection/support/XmlQueryWriter.cpp. listplay -> lastplay, equal -> equals. Dynamic playlists with those matches were not saved/loaded properly.

BUG: 183581

svn path=/trunk/extragear/multimedia/amarok/; revision=933918